Clean up code after fixing anchor positioning/spacing.

--- a/style.css
+++ b/style.css
@@ -68,20 +68,9 @@ a:visited {
 #banner_spacer {
   height: 120px;
   width: 100%;
-  /*background: #FFFFFF;
-  padding: 20px;
-  font-family: "Trebuchet MS", "Arial", sans-serif;
-  font-size: 24px;
-  color: #000000;*/
-}
-
-/*This text is hidden and only serves to size the banner spacer correctly*/
-#banner_spacer_hidden_text {
-  /*height: 3em;*/ /*must match .banner_text height above*/
 }
 
 .background_images {
-  /*margin-bottom: -120px;*/
   width: 100%
 }
 
@@ -100,42 +89,12 @@ h2 {
   visibility: hidden;
 }
 
-/*h2.anchor {
-  display: block;
-  position: relative;
-  top: -120px;
-  visibility: hidden;
-}*/
-
-
-/*h2:before {
-  display: block;
-  content:"";
-  margin-top: -100px; WAS COMMENTED
-  height: 100px;
-  visibility: hidden;
-}*/
-
-#bm_profile:before {
-  /*margin-top: -100px;
-  height: 100px;*/
-  /*height: 200px;*/
-}
-
 .section_container {
   position: relative;
   display: inline-block;
   /*border: 1px solid rgb(123, 123, 123);*/
-  /*margin-bottom: -120px;*/
 }
 
-/*.section_container:before {
-  display: block;
-  content: "";
-  margin-top: -120px;
-  height: 120px;
-}
-*/
 .text_container {
   position: absolute;
   height: 50%;
